# ZEBRA-Prop

./: CITATION.cff  README.md  pyproject.toml
config/: config.yaml
docs/: data_format.md
examples/: quickstart_train.sh  sample_config.yaml
examples/data/description/sample/: AtomicOrbitals.csv  ElementProperty.csv
examples/data/id_prop/: id_prop_band_gap.csv
src/zebra_prop/: __init__.py  __main__.py  cli.py  data.py  hydra_setting.py  model.py  train.py  utils.py
src/zebra_tool_kit/: __init__.py  __main__.py  cli.py  description.py  featurizer.py  gui.py
tests/: test_data.py  test_toolkit_description_id.py  test_toolkit_descriptions.py  test_train_smoke.py  test_train_validation.py  test_utils.py
