[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "zebra-prop"
version = "0.1.0"
description = "Material property prediction with text descriptions, PyTorch Lightning, and Hydra."
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
  "hydra-core>=1.3.2",
  "matminer>=0.9.3",
  "matplotlib>=3.8.0",
  "numpy>=1.26.0",
  "omegaconf>=2.3.0",
  "pandas>=2.2.0",
  "pymatgen>=2024.6.0",
  "pytorch-lightning>=2.2.0",
  "scikit-learn>=1.4.0",
  "torch>=2.2.0",
  "tqdm>=4.66.0",
  "transformers>=4.40.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
]

[project.scripts]
zebra-prop = "zebra_prop.cli:main"
zebra-tool-kit = "zebra_tool_kit.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/zebra_prop", "src/zebra_tool_kit"]

[tool.hatch.build.targets.wheel.force-include]
"config/config.yaml" = "config/config.yaml"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
